@@ -39,7 +39,6 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 
     ## Common action
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_COMMON)
-	ADD_DEPENDENCIES(tag version_check)
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_COMMON)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_GIT)
