@@ -22,9 +22,6 @@
 #     This macro outputs following files:
 #     + ChangeLog: Log of changes.
 #       Depends on ChangeLog.prev and releaseFile.
-#     This macro defines following targets:
-#     + version_check: Check whether the current PRJ_VER value match
-#       the PRJ_VER declared in releaseFile.
 #     This macro sets following variables:
 #     + PRJ_VER: Release version.
 #     + CHANGE_SUMMARY: Summary of changes.
@@ -84,47 +81,27 @@ IF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
 
 	INCLUDE(DateTimeFormat)
 
-	SET(CMAKE_CACHE_TXT "CMakeCache.txt")
-	# PRJ_VER won't be updated until the removal of CMAKE_CACHE_TXT
-	# and execution of cmake .
-	SET(_version_check_cmd grep -e 'PRJ_VER=' ${RELEASE_FILE} |  tr -d '\\r\\n' | sed -e s/PRJ_VER=//)
-	ADD_CUSTOM_TARGET(version_check
-	    COMMAND ${CMAKE_COMMAND} -E echo "PRJ_VER=${PRJ_VER}"
-	    COMMAND ${CMAKE_COMMAND} -E echo "Release file="`eval \"${_version_check_cmd}\"`
-	    COMMAND test \"`${_version_check_cmd}`\" = \"\" -o \"`${_version_check_cmd}`\" = "${PRJ_VER}"
-	   || echo Inconsistent version detected. Fixing..
-	   && ${CMAKE_COMMAND} -E remove -f ${CMAKE_CACHE_TXT}
-	   && ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
-	   )
-
         FILE(WRITE "${CMAKE_BINARY_DIR}/ChangeLog" "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}")
         FILE(APPEND "${CMAKE_BINARY_DIR}/ChangeLog" "${CHANGELOG_ITEMS}\n\n")
 	FILE(READ "ChangeLog.prev" CHANGELOG_PREV)
 	FILE(APPEND "${CMAKE_BINARY_DIR}/ChangeLog" "${CHANGELOG_PREV}")
 
-	ADD_CUSTOM_COMMAND(OUTPUT ChangeLog  ${CMAKE_CACHE_TXT}
+	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/ChangeLog
 	    COMMAND ${CMAKE_COMMAND} -E remove -f ${CMAKE_CACHE_TXT}
 	    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
-	    DEPENDS ${releaseFile} ChangeLog.prev
-	    COMMENT "ChangeLog or ${CMAKE_CACHE_TXT} is older than ${releaseFile}. Rebuilding"
+	    DEPENDS ${RELEASE_FILE} ChangeLog.prev
+	    COMMENT "ChangeLog is older than ${RELEASE_FILE}. Rebuilding"
 	    VERBATIM
 	    )
 
 	ADD_CUSTOM_TARGET(changelog ALL
-	    DEPENDS ChangeLog ${CMAKE_CACHE_TXT}
+	    COMMAND ${CMAKE_COMMAND} -E remove -f ${CMAKE_CACHE_TXT}
+	    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
+	    DEPENDS ${RELEASE_FILE} ChangeLog.prev
+	    COMMENT "Building ChangeLog"
+	    VERBATIM
 	    )
 
-	#ADD_CUSTOM_COMMAND(OUTPUT ChangeLog
-	#    COMMAND ${CMAKE_COMMAND} -E echo "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}" > ChangeLog
-	#    COMMAND cat ${releaseFile}_NO_PACK_CHANGELOG_ITEM  >> ChangeLog
-	#    COMMAND echo -e "\\n" >> ChangeLog
-	#    COMMAND cat ChangeLog.prev >> ChangeLog
-	#    DEPENDS ${CMAKE_SOURCE_DIR}/${releaseFile} ${CMAKE_SOURCE_DIR}/ChangeLog.prev
-	#    COMMENT "Building ChangeLog"
-	#    VERBATIM
-	#    )
-
-	# By this time,
     ENDFUNCTION(LOAD_RELEASE_FILE releaseFile)
 
 ENDIF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
